/*
 * $Id: ChangeLog,v 1.4613 2005/11/13 06:21:20 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-11-13 16:58 UTC-0400 Marcelo Anelli <marceloanelli@users.sourceforge.net>
  * contrib/libnf/samples/libnf.prg
    + Demo and test program added for FT_ASUM(), FT_RESTARR(), FT_SAVEARR() and
      FT_ADDER
    + Same program corrected to be compiled in for Clipper 5.x for check.
      Link it with Nanfor.lib
  * contrib/libnf/samples/TODO
    + Added.
  * source/lang/msges.c
  * source/lang/msgeswin.c
    + Translation of last four expressions.

2005-11-13 03:25 UTC-0300 Walter Negro <anegro-AT-overnet.com.ar>
  * source/vm/hvm.c
    ! Stupid error in copy & paste.

2005-11-12 19:45 UTC-0300 Walter Negro <anegro-AT-overnet.com.ar>
  * include/hashapi.h
  * include/hbhash.h
  * include/hbvmpub.h
  * source/rtl/tobject.prg
  * source/vm/hash.c
  * source/vm/hvm.c
  * tests/assocar2.prg
    + Add Associative Array compatiblity in Hash.

2005-11-12 13:42 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbdefs.h
    * Moved #include "hbtrace.h" to bottom to follw definitions required by hbtrace.h

    /* I beg to have a #include manager ASAP */

2005-11-12 12:26 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbtrace.h
  * source/rtl/trace.c
    * Exported TraceLog()

  * source/rtl/win32ole.prg
    * Minor rename

2005-11-12 19:46 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbcomp.h
  * xharbour/source/compiler/calconst.c
  * xharbour/source/compiler/gencobj.c
  * xharbour/source/compiler/harbour.c
  * xharbour/source/compiler/hbgenerr.c
  * xharbour/source/compiler/hbpcode.c
    * emit warning and error messages to stderr instead of stdout
      Now it's enabled only for *nix platforms. I left the decision
      about non unix platforms to developers which use them.